<resources>
    <string name="app_name">StockDigger</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="pb">PB</string>
    <string name="pe">PE</string>
    <string name="peg">PEG</string>
    <string name="add">Add</string>
    <string name="stock_tag">Stock Tag:</string>
    <string name="PB">PB:</string>
    <string name="PE">PE:</string>
    <string name="PEG">PEG:</string>
    <string name="clear_table">Clear Table</string>
    <string name="confirm">Confirm</string>
</resources>
